stop page from scrolling behind blowup, with a method that works on iphone

--- a/style_page.css
+++ b/style_page.css
@@ -1,5 +1,10 @@
-.pageBody {
+
+/*
+.pageBody.modal-open {
+	overflow: hidden;
 }
+*/
+
 .pageContent {
 	text-align: center;
 	margin-left: auto;
